# chatbot-service

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
src/resume_chatbot_api/: __init__.py  app.py  main.py
src/resume_chatbot_api/api/: __init__.py  chat.py  resume.py
src/resume_chatbot_api/core/: config.py  security.py
src/resume_chatbot_api/models/: __init__.py  resume.py
src/resume_chatbot_api/schemas/: __init__.py  chat_schema.py  resume_schemas.py
src/resume_chatbot_api/security/: security.py
src/resume_chatbot_api/services/: __init__.py  llm_operator.py  prompt_builders.py  prompts.py
src/resume_chatbot_api/tests/: conftest.py  test_prompt_builders.py  test_resume_routes.py
tests/: conftest.py  test_chat.py  test_prompt_builders.py  test_resume_routes.py
