[project]
name = "resume-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "langchain>=0.3",
    "langchain-core>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]




[tool.pytest.ini_options]
pythonpath = ["src"]
