[project]
name = "resume-chatbot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/resume_chatbot_api/tests"]
